fix for #890 (static layer palette layout issue)

--- a/app/styles/components/map/item-list.scss
+++ b/app/styles/components/map/item-list.scss
@@ -43,7 +43,6 @@
 .listItem {
   align-items: center;
   display: flex;
-  flex-wrap: wrap;
   padding-left: $menu-mobile-left-padding;
   padding-right: $menu-mobile-right-padding;
   position: relative;
